<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techease.gethelp.fragments.AvailableNowFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_main"
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:background="@drawable/head">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/need_a_car"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/situation_description"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:background="#eeeeee"
            android:gravity="start"
            android:padding="@dimen/five_dp"
            android:hint="@string/i_need_a_car"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:text="@string/current_location"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/et_current_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:background="@color/white"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="sans" />

        <TextView
            android:id="@+id/tv_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:text="@string/destination_address"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/et_destination"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:text="@string/destination"
            android:gravity="center_vertical"
            android:padding="@dimen/five_dp"
            android:background="@color/white"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="sans" />


        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:text="@string/contact"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:inputType="number"
            android:background="@color/white"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/request"
            android:textColor="@color/white"
            android:typeface="sans" />
    </TableLayout>

</ScrollView>
